fixing the gallery__bgc z-index

--- a/css/main.css
+++ b/css/main.css
@@ -594,7 +594,7 @@ html, body {
   position: absolute;
   top: -143px;
   left: 48px;
-  z-index: 100;
+  z-index: 1;
 }
 
 .gallery__title {
